@@ -81,6 +81,7 @@ class Connection extends EventEmitter {
     let args
     args = (arguments.length >= 1 ? [].slice.call(arguments, 0) : [])
     args.unshift(this.options.namespace)
+    args = args.filter((e) => { return String(e).trim() })
     return args.join(':')
   }
 }
