@@ -185,6 +185,7 @@ class Queue extends EventEmitter {
     for (var i = 0; i < keys.length; i++) {
       var k = keys[i]
       k = k.replace(this.connection.key(''), '')
+      if (k[0] === ':') { k = k.substr(1) }
       data[k] = values[i]
     }
 
